[gd_scene load_steps=41 format=2]

[ext_resource path="res://Scenes/Mail_Invitacion/Scripts/Mail_Invitacion.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/carta1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/carta2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/3.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/4.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/5.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/6.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/7.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/8.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/9.png" type="Texture" id=12]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/10.png" type="Texture" id=13]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/11.png" type="Texture" id=14]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/12.png" type="Texture" id=15]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/13.png" type="Texture" id=16]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/14.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/15.png" type="Texture" id=18]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/16.png" type="Texture" id=19]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/17.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/18.png" type="Texture" id=21]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/19.png" type="Texture" id=22]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/20.png" type="Texture" id=23]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/21.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/22.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/23.png" type="Texture" id=26]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/24.png" type="Texture" id=27]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/25.png" type="Texture" id=28]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/ventana.png" type="Texture" id=29]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/rojo.png" type="Texture" id=30]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/verde.png" type="Texture" id=31]
[ext_resource path="res://Scenes/Mail_Invitacion/Textures/amarillo.png" type="Texture" id=32]
[ext_resource path="res://Common/Fonts/Philosopher-Regular.ttf" type="DynamicFontData" id=33]
[ext_resource path="res://Common/Textures/flecha.png" type="Texture" id=34]

[sub_resource type="Animation" id=1]
resource_name = "Carta"
length = 0.55
tracks/0/type = "value"
tracks/0/path = NodePath("Animacion_Carta:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 720 ), Vector2( 210, 720 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Mail"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Mail:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Mail:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 720 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Carta",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": false,
"name": "Texto",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 33 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 90.0001, 80 )

[node name="Mail_Invitacion" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1440.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Carta = SubResource( 1 )
anims/Mail = SubResource( 2 )

[node name="Animacion_Carta" type="AnimatedSprite" parent="."]
position = Vector2( 360, 720 )
scale = Vector2( 4, 4 )
frames = SubResource( 3 )
animation = "Carta"
__meta__ = {
"_edit_lock_": true
}

[node name="Animacion_Texto" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 360, 460 )
frames = SubResource( 4 )
animation = "Texto"
__meta__ = {
"_edit_lock_": true
}

[node name="Mail" type="Control" parent="."]
visible = false
margin_left = 360.0
margin_top = 720.0
margin_right = 360.0
margin_bottom = 720.0
rect_scale = Vector2( 0, 0 )
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Ventana" type="Sprite" parent="Mail"]
position = Vector2( 360, 720 )
scale = Vector2( 3.06383, 6.63249 )
texture = ExtResource( 29 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rojo" type="Sprite" parent="Mail"]
position = Vector2( 664.881, 56.501 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 30 )
__meta__ = {
"_edit_lock_": true
}

[node name="Verde" type="Sprite" parent="Mail"]
position = Vector2( 559.978, 56.501 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 31 )
__meta__ = {
"_edit_lock_": true
}

[node name="Amarillo" type="Sprite" parent="Mail"]
position = Vector2( 453.227, 56.501 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Texto_Mail" type="Label" parent="Mail"]
margin_left = 30.0
margin_top = 160.0
margin_right = 690.0
margin_bottom = 1110.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pythonia es una alegre ciudad completamente automatizada. Todos sus habitantes hacen sus actividades cotidianas gracias a algún aparato tecnológico que lleva cargado un programa para realizar sus tareas...

O así era, hasta el día en que unos hackers estaban probando un nuevo virus y este se descontroló, estropeando los programas en toda la ciudad y desatando el caos. Los programas comenzaron a presentar errores en su escritura o fueron desordenados.

Tu misión es hacer que los programas que fueron estropeados vuelvan a la normalidad. Sé que eres un programador novato y estás nervioso, pero la gente de Pythonia necesita tu ayuda.Además trataré de ayudarte en lo que pueda."
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="Mail"]
position = Vector2( 630, 1350 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Mail/Area2D"]
scale = Vector2( 7, 7 )
texture = ExtResource( 34 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mail/Area2D"]
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="input_event" from="Mail/Area2D" to="." method="_on_Area2D_input_event"]
